Calendar data now showing in console

--- a/app.json
+++ b/app.json
@@ -17,7 +17,10 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "infoPlist": {
+        "NSReminderUsageDescription": "UsingCalendar"
+      }
     },
     "android": {
       "adaptiveIcon": {
